@@ -1,3 +1,8 @@
+2025-07-25  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el (remote-eat): Remove connection local variables profile.
+	(eat-exec@connection-local-vars): Remove advice.
+
 2025-07-24  Zhengyi Fu  <i@fuzy.me>
 
 	* early-init.el (kill-do-not-save-duplicates): Set to t.
